# vectadb

./: .env.models  .env.models.example  .gitignore  ARCHITECTURE_PHASE5.md  CREATING_PLUGINS.md  DATABASE_STATUS.md  EMBEDDING_PLUGINS.md  ONTOLOGY_DESIGN.md  ONTOLOGY_PHASE2_COMPLETE.md  ONTOLOGY_PHASE3_COMPLETE.md  PHASE5_CHECKLIST.md  PHASE5_COMPLETE.md  PHASE5_DAY3_TESTING.md  PHASE5_DECISIONS.md  PLUGIN_INTEGRATION_COMPLETE.md  README.md  WEBSITE_PROMPT.md  bedrock_schema.json  bedrock_schema_correct.json  bedrock_schema_fixed.json  docker-compose.yml  history.txt  simple_schema.yaml
archive/: docker-compose.yml  main copy 3.py  main copy.py  main.py  nebula_agent_registry_full.html  nebula_test.ipynb  test.txt
archive/code/: pyproject.toml  tests.ipynb
archive/code/shortid/: config.py  generator.py  main.py  rpc_server.py  storage.py
archive/couchdb/: docker-compose.yml
archive/gafana+prometheus/: docker-compose.yml
archive/grafana/: docker-compose.yml
archive/milvus/: docker-compose.yml
archive/minio/: docker-compose.yml
archive/mongo/: docker-compose.yml
archive/nebula/: docker-compose.yml
archive/neo4j/: docker-compose.yml
archive/ollama/: docker-compose.yml
archive/portainer/: docker-compose.yml
archive/prometheus/: docker-compose.yml
archive/prometheus/config/: prometheus.yml
archive/register/: TESTING_GUIDE.md  dockerignore  main.py  pyproject.toml  requirements.txt  weaviate_retry_queue.json
archive/register/archive/: app copy.js  app1.js  app2.js  config.yaml  index copy.html  index.html  main copy 11.py  main copy 12.py  main copy 13.py  main copy 14.py  main copy 15.py  main copy 16.py  main copy 17.py  main copy 18.py  main copy 2.py  main copy 20.py  main copy 3.py  main copy 4.py  main copy 5.py  main copy 6.py  main copy 7.py  main copy 8.py  main copy 9.py  main copy.py  main1.py  main2.py  requirements.txt
archive/register/chroma_data/: chroma.sqlite3
archive/register/frontend/: index.html
archive/register/frontend/assets/: app.js
archive/register/notes/: notes.txt  notes2.txt
archive/register/reports/: agent_registry_report_20251124_192218.txt  agent_registry_report_20251124_192916.txt  agent_registry_report_20251125_010700.txt
archive/register/tests/: api-test.py  test-apis.py  test-chroma.py  test-full.sh  test-system.py
archive/tests/: auto_fix_nebula.py  create_space_agent_registry.py  fix_nebula_hosts_and_space.py  nebula_report.py  test_nebula.py
archive/waiting_room/loki/: docker-compose.yml
archive/waiting_room/weaviate/: docker-compose.yml
documents/: AGENT_SUMMARY.md  API_EXAMPLES.md  ARCHITECTURE_DIAGRAM.md  DOCUMENTATION_INDEX.md  FINAL_STATUS.md  INSTALL_RUST.md  INTEGRATION_COMPLETE.md  MODELS_UPDATE_SUMMARY.md  MODEL_QUICK_REFERENCE.md  MODEL_SELECTION_GUIDE.md  MVP_IMPLEMENTATION_PLAN.md  MVP_ROADMAP.md  ONTOLOGY_PHASE1_COMPLETE.md  ONTOLOGY_PHASE4_PLAN.md  ONTOLOGY_PHASE4_PROGRESS.md  PHASE4_COMPLETE.md  PHASE5_DAY1_COMPLETE.md  PHASE5_DAY2_COMPLETE.md  PHASE5_PLAN.md  PHASE6_COMPLETE.md  PHASE8_COMPLETE.md  PLUGIN_QUICKSTART.md  PROGRESS.md  PROJECT_COMPLETE.md  PROJECT_STATUS_FINAL.md  QUICKSTART_AGENT.md  README_MODELS.md  SCHEMA_AGENT_README.md  SESSION_SUMMARY.md  SURREALDB_FIX.md  SYNTHETIC_API_SETUP.md  TEMPLATE_GENERATOR_VALIDATION.md
notes/: VectaDB_Conversation_Export.md  VectaDB_Presentation.md  notes.txt  notes2.txt
scripts/: demo_schema_agent.sh  ingest_bedrock_graph.py  ingest_bedrock_simple.py  model_config.py  run_schema_agent.sh  test_bedrock_ingestion.py  vectadb_schema_agent.py
test/: BEDROCK_GRAPH_INGESTION.md  Cargo.toml  DATABASE_VERIFICATION.md  GRAPH_DATABASE_TEST.md  QUICKSTART.md  README.md  TEST_SUITE_SUMMARY.md  bedrock_chain_of_thought_logs.json  bedrock_graph_ingestion.rs  bedrock_test.rs  database_verification.rs  graph_database_test.rs  ingest_as_graph.sh  run_test.sh  test_graph.sh  verify_databases.sh
vectadb/: .env.example  Cargo.toml  history.txt
vectadb-agents/cloudwatch/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.bedrock.yaml  config.example.yaml
vectadb-agents/cloudwatch/examples/: test_bedrock_logs.rs
vectadb-agents/cloudwatch/src/: cloudwatch_client.rs  config.rs  main.rs  parser.rs  vectadb_client.rs
vectadb-agents/cloudwatch/tests/: integration_test.rs
vectadb-python/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
vectadb-python/examples/: async_usage.py  basic_usage.py  event_ingestion.py
vectadb-python/tests/: __init__.py  test_async_client.py  test_client.py
vectadb-python/vectadb/: __init__.py  async_client.py  client.py  exceptions.py  models.py
vectadb-ui/: README.md  index.html  package-lock.json  package.json
vectadb-ui/src/: App.vue  style.css
vectadb-ui/src/api/: client.ts
vectadb-ui/src/components/: GraphVisualization.vue
vectadb-ui/src/router/: index.ts
vectadb-ui/src/stores/: vectadb.ts
vectadb-ui/src/types/: index.ts
vectadb/config/embeddings/: README.md  cohere.yaml  huggingface.yaml  local.yaml  openai.yaml  synthetic.yaml  voyage.yaml
vectadb/docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md  TESTING.md
vectadb/examples/: embedding_plugins.rs
vectadb/ontologies/: agent_ontology.yaml
vectadb/scripts/: README.md  new-plugin.sh
vectadb/src/: config.rs  error.rs  lib.rs  main.rs
vectadb/src/analytics/: aggregator.rs  analyzer.rs  metrics.rs  mod.rs
vectadb/src/api/: analytics_handlers.rs  handlers.rs  mod.rs  routes.rs  types.rs
vectadb/src/db/: mod.rs  qdrant_client.rs  surrealdb_client.rs  types.rs
vectadb/src/embeddings/: manager.rs  mod.rs  plugin.rs  service.rs
vectadb/src/embeddings/plugins/: cohere.rs  huggingface.rs  mod.rs  openai.rs  voyage.rs
vectadb/src/intelligence/: mod.rs  ontology_reasoner.rs
vectadb/src/models/: agent.rs  embedding.rs  log.rs  mod.rs  task.rs  thought.rs
vectadb/src/ontology/: entity_type.rs  loader.rs  mod.rs  relation_type.rs  schema.rs  validator.rs
vectadb/src/query/: coordinator.rs  mod.rs  types.rs
vectadb/tests/: api_tests.rs  surrealdb_crud_test.rs  voyage_test.rs
(+18 files in other folders)
