[package]
name = "vectadb"
version = "0.1.0"
edition = "2021"
authors = ["Roberto Williams Batista"]
description = "The Observability Database for LLM Agents"
license = "Apache-2.0"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Database clients
surrealdb = { version = "2.4", features = ["protocol-http"] }
qdrant-client = "1.16"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Embeddings - Using sentence-transformers-rs (pure Rust, based on Candle)
sentence-transformers-rs = { git = "https://github.com/jwnz/sentence-transformers-rs", branch = "main" }
candle-core = "0.9"

# HTTP client for embedding plugins
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

# Configuration
dotenvy = "0.15"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = "0.14"

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
nanoid = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# Ontology support
serde_yaml = "0.9"
regex = "1.10"

# Security
argon2 = "0.5"
jsonwebtoken = "9"

[dev-dependencies]
# Testing
tokio-test = "0.4"
wiremock = "0.6"
