[package]
name = "vectadb-cloudwatch-agent"
version = "0.1.0"
edition = "2021"
authors = ["Roberto Williams Batista"]
description = "CloudWatch log ingestion agent for VectaDB"
license = "Apache-2.0"

[dependencies]
# AWS SDK
aws-config = "1.1"
aws-sdk-cloudwatchlogs = "1.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for VectaDB API
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

# Configuration
dotenvy = "0.15"

[[bin]]
name = "vectadb-cloudwatch-agent"
path = "src/main.rs"

[[example]]
name = "test_bedrock_logs"
path = "examples/test_bedrock_logs.rs"
